[package]
name = "degrees_of_seperation"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
fuzzy_match = "0.2.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
